--- a/BFS Lab Problems/Lab01Task02.ipynb
+++ b/BFS Lab Problems/Lab01Task02.ipynb
@@ -2,8 +2,8 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 45,
-   "id": "domestic-discipline",
+   "execution_count": 52,
+   "id": "square-acquisition",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -13,8 +13,8 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 46,
-   "id": "shaped-milan",
+   "execution_count": 53,
+   "id": "inappropriate-brooklyn",
    "metadata": {},
    "outputs": [
     {
@@ -38,8 +38,8 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 47,
-   "id": "killing-representation",
+   "execution_count": 54,
+   "id": "noticed-renewal",
    "metadata": {},
    "outputs": [
     {
@@ -65,8 +65,8 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 48,
-   "id": "mechanical-elder",
+   "execution_count": 55,
+   "id": "exotic-writer",
    "metadata": {},
    "outputs": [
     {
@@ -109,8 +109,8 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 49,
-   "id": "parallel-sample",
+   "execution_count": 56,
+   "id": "large-arabic",
    "metadata": {},
    "outputs": [
     {
@@ -140,15 +140,15 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 51,
-   "id": "behind-adelaide",
+   "execution_count": 57,
+   "id": "shaped-strike",
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "2\n"
+      "Nora\n"
      ]
     }
    ],
@@ -196,7 +196,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "bottom-insured",
+   "id": "compliant-storm",
    "metadata": {},
    "outputs": [],
    "source": []
@@ -204,7 +204,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "extensive-tucson",
+   "id": "attractive-spare",
    "metadata": {},
    "outputs": [],
    "source": []
@@ -212,7 +212,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "wireless-slope",
+   "id": "indie-article",
    "metadata": {},
    "outputs": [],
    "source": []
@@ -220,7 +220,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "fifty-wisdom",
+   "id": "spanish-climb",
    "metadata": {},
    "outputs": [],
    "source": []
@@ -228,7 +228,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "musical-linux",
+   "id": "corporate-chapter",
    "metadata": {},
    "outputs": [],
    "source": []
@@ -236,7 +236,15 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "established-tennis",
+   "id": "sharp-nickel",
+   "metadata": {},
+   "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "significant-ghost",
    "metadata": {},
    "outputs": [],
    "source": []
